--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ before_install:
   - docker build -t alifatov/docker-react -f  Dockerfile.dev .
 
 script:
-  - docker run alifatov/docker-react nmp run test -- --coverage
-  
+  - docker run alifatov/docker-react npm run test -- --coverage
