--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
   - docker build -t alifatov/docker-react -f  Dockerfile.dev .
 
 script:
-  - docker run -i alifatov/docker-react npm run test -- --coverage
+  - docker run alifatov/docker-react npm run test --coverage
