--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 sudo: required
 services:
   - docker
+
 before_install:
   - docker build -t alifatov/docker-react -f  Dockerfile.dev .
 
+
 script:
-  - docker run alifatov/docker-react npm run test -- --coverage
+  - docker run -it alifatov/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
