--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ services:
   - docker
 
 before_install:
-  - docker build -t alifatov/docker-react -f  Dockerfile.dev .
+  - docker build -t docker-react -f Dockerfile.dev .
 
 
 script:
-  - docker run -it alifatov/docker-react npm run test -- --coverage
+  - docker run -e CI=true docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
